Add hover effects

--- a/assets/particlesjs-config.json
+++ b/assets/particlesjs-config.json
@@ -46,7 +46,7 @@
       }
     },
     "line_linked": {
-      "enable": true,
+      "enable": false,
       "distance": 150,
       "color": "#20c997",
       "opacity": 0.4,
